# Soln-Agents

./: .env.example  .gitignore  .windsurfrules  ARCHITECTURE.md  BARE_METAL.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  clean_sessions.sh  extract_code.sh  extract_web.sh  goose_README.md  languine.json  launch_goose_tools.sh  package-lock.json  package.json  replacement_log.txt  requirements.txt  setup.py  simple_test.lang  test.lang
.ai/: arch.md  prd.md  story-1-complete.story.md  story-1.story.md  story-2-complete.story.md  story-2.story.md  story-3.story.md  (+1 more)
SolnAI-agents/shared/: CONTRIBUTING.md  INSTALL.md  README.md  __init__.py  pyproject.toml  pytest.ini  setup.py
SolnAI-agents/shared/.github/workflows/: test.yml
SolnAI-agents/shared/config/: README.md  __init__.py  config.example.json  config.py  settings.py
SolnAI-agents/shared/examples/: README.md  llm_agent.py  simple_agent.py  youtube_agent.py
SolnAI-agents/shared/examples/prompt_chains/: README.md  branching_chain.py  chain_utils.py  parallel_chain.py  recursive_chain.py  sequential_chain.py  tool_augmented_chain.py
SolnAI-agents/shared/middleware/: __init__.py  middleware.py
SolnAI-agents/shared/testing/: __init__.py  agent_tester.py
SolnAI-agents/shared/tests/: README.md  custom_agent_test.py  test_agent_tester.py  test_base_agent.py  test_utils.py
SolnAI-agents/shared/types/: __init__.py  api.py
SolnAI-agents/shared/utils/: README.md  __init__.py  auth.py  base_agent.py  db.py  error_handling.py  llm.py  testing.py  text_processor.py  youtube.py
crewai-rust/crewai-pyo3/: Cargo.toml
crewai-rust/crewai-pyo3/src/: lib.rs
(+670 files in other folders)
