[package]
name = "crewai_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "crewai_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
crewai-core = { path = "../crewai-core" }
pyo3-log = "0.9"
log = "0.4"
sysinfo = "0.29"
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }  # Updated to match pyo3 version
once_cell = "1.8"  # For Tokio runtime singleton
tokio = { version = "1", features = ["full"] }  # Add tokio dependency 